Delete redundant workflow entities.

--- a/chorus/webapp/pom.xml
+++ b/chorus/webapp/pom.xml
@@ -83,6 +83,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.infoclinika</groupId>
             <artifactId>mailing</artifactId>
             <version>1.0</version>
