--- a/docker/webapp/application.properties
+++ b/docker/webapp/application.properties
@@ -2,11 +2,11 @@
 project.title=Chorus-opensource
 
 # WARNING! CONTAINS PRIVATE KEYS! DO NOT PUBLISH!
-amazon.key=
-amazon.secret=
-amazon.active.bucket=chorus-reduced-docker
-amazon.archive.bucket=chorus-reduced-docker
-amazon.glacier.vault=chorus-reduced-docker
+amazon.key=AKIAIG3PSQXQDOGRQPYQ
+amazon.secret=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
+amazon.active.bucket=chorus-opensource-dist
+amazon.archive.bucket=chorus-opensource-dist
+amazon.glacier.vault=chorus-opensource-dist
 amazon.expiration.months=3
 #1000 Days by default
 amazon.archiving.expiration.hours=48000
