fix user & password

--- a/docker/webapp/application.properties
+++ b/docker/webapp/application.properties
@@ -61,7 +61,7 @@ billing.planChangeDuration=PT0S
 
 #Demo Data Settings
 database.data.create=true
-database.data.admin.email=sds
+database.data.admin.email=demo-user
 database.data.admin.password=pwd
 
 #Folder names to be used when uploading items of different types to the active bucket
