fix tests in the web-app and add new

--- a/chorus/model-impl/src/test/resources/test-application.properties
+++ b/chorus/model-impl/src/test/resources/test-application.properties
@@ -1,4 +1,7 @@
-amazon.active.bucket=chorus-unit-tests
+amazon.key=AKIAJ2RL7NBLGON2RMNA
+amazon.secret=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
+amazon.active.bucket=chorus-opensource-qa
+
 billing.enabled=true
 billing.server.timezone=US/Eastern
 
