delete aws credentials from properties

--- a/chorus/model-impl/src/test/resources/messaging.properties
+++ b/chorus/model-impl/src/test/resources/messaging.properties
@@ -1,6 +1,6 @@
-amazon.accessKey=AKIAJ2RL7NBLGON2RMNA
-amazon.secretKey=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
-amazon.default-bucket=chorus-opensource-qa
+amazon.accessKey=
+amazon.secretKey=
+amazon.default-bucket=
 
 amazon.iam.useRoles=false
 #amazon.accessKey=asdfasdf
