--- a/chorus/model-impl/src/test/resources/test-application.properties
+++ b/chorus/model-impl/src/test/resources/test-application.properties
@@ -1,6 +1,6 @@
-amazon.key=AKIAJ2RL7NBLGON2RMNA
-amazon.secret=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
-amazon.active.bucket=chorus-opensource-qa
+amazon.key=
+amazon.secret=
+amazon.active.bucket=
 
 billing.enabled=true
 billing.server.timezone=US/Eastern
