--- a/docker/webapp/messaging.properties
+++ b/docker/webapp/messaging.properties
@@ -1,7 +1,7 @@
-amazon.accessKey=AKIAIG3PSQXQDOGRQPYQ
-amazon.secretKey=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
+amazon.accessKey=
+amazon.secretKey=
 
-amazon.default-bucket=chorus-opensource-dist
+amazon.default-bucket=
 # amazon.serverside.encryption=true
 amazon.protocol=https
 
