--- a/docker/webapp/messaging.properties
+++ b/docker/webapp/messaging.properties
@@ -1,5 +1,5 @@
-amazon.accessKey=AKIAIG3PSQXQDOGRQPYQ
-amazon.secretKey=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
+amazon.accessKey=
+amazon.secretKey=
 
 amazon.default-bucket=chorus-opensource-dist
 # amazon.serverside.encryption=true
