--- a/chorus/webapp/src/main/resources/log4j.properties
+++ b/chorus/webapp/src/main/resources/log4j.properties
@@ -1,161 +1,12 @@
-log4j.rootCategory=INFO, stdout, buffer, LogstashWebapp
-log4j.logger.LogstashWebapp=INFO, LogstashWebapp
-log4j.logger.ProteinSearcher=INFO, ProteinSearcher, LogstashProteinSearcher
-log4j.logger.ProteinSearchResults=INFO, ProteinSearchResults, LogstashProteinSearchResults
-log4j.logger.PerFileTranslator=DEBUG, PerFileTranslator, LogstashPerFileTranslator
-log4j.logger.FileUploader=INFO, FileUploader, LogstashFileUploader
-log4j.logger.Charts=INFO, Charts, LogstashCharts
+log4j.rootCategory=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
 
-log4j.appender.buffer=com.infoclinika.mssharing.utils.logging.LogBuffer
-log4j.appender.buffer.layout=org.apache.log4j.PatternLayout
-log4j.appender.buffer.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
-log4j.appender.buffer.size=200
-
-#Everything connected with protein search creator will be written in separate file
-log4j.appender.ProteinSearcher=org.apache.log4j.RollingFileAppender
-log4j.appender.ProteinSearcher.layout=org.apache.log4j.PatternLayout
-log4j.appender.ProteinSearcher.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
-log4j.appender.ProteinSearcher.file=${catalina.base}/logs/proteinSearch.log
-log4j.appender.ProteinSearcher.MaxFileSize=10MB
-log4j.appender.ProteinSearcher.MaxBackupIndex=5
-
-#Everything connected with protein search results will be written in separate file
-log4j.appender.ProteinSearchResults=org.apache.log4j.RollingFileAppender
-log4j.appender.ProteinSearchResults.layout=org.apache.log4j.PatternLayout
-log4j.appender.ProteinSearchResults.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
-log4j.appender.ProteinSearchResults.file=${catalina.base}/logs/proteinSearchResults.log
-log4j.appender.ProteinSearchResults.MaxFileSize=10MB
-log4j.appender.ProteinSearchResults.MaxBackupIndex=5
-
-#Everything connected with file upload will be written in separate file
-log4j.appender.FileUploader=org.apache.log4j.RollingFileAppender
-log4j.appender.FileUploader.layout=org.apache.log4j.PatternLayout
-log4j.appender.FileUploader.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
-log4j.appender.FileUploader.file=${catalina.base}/logs/fileUpload.log
-log4j.appender.FileUploader.MaxFileSize=10MB
-log4j.appender.FileUploader.MaxBackupIndex=5
-
-
-#Everything connected with per file translation will be written in separate file
-log4j.appender.PerFileTranslator=org.apache.log4j.RollingFileAppender
-log4j.appender.PerFileTranslator.layout=org.apache.log4j.PatternLayout
-log4j.appender.PerFileTranslator.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
-log4j.appender.PerFileTranslator.file=${catalina.base}/logs/perFileTranslator.log
-log4j.appender.PerFileTranslator.MaxFileSize=10MB
-log4j.appender.PerFileTranslator.MaxBackupIndex=5
-
-#Everything connected with per charts will be written in separate file
-log4j.appender.Charts=org.apache.log4j.RollingFileAppender
-log4j.appender.Charts.layout=org.apache.log4j.PatternLayout
-log4j.appender.Charts.layout.ConversionPattern=%d %p (%t) [%c]:%L - %m%n
-log4j.appender.Charts.file=${catalina.base}/logs/charts.log
-log4j.appender.Charts.MaxFileSize=10MB
-log4j.appender.Charts.MaxBackupIndex=5
-
-log4j.appender.LogstashWebapp=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashWebapp.tags=development
-log4j.appender.LogstashWebapp.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashWebapp.Port=12201
-
-log4j.appender.LogstashCharts=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashCharts.tags=development,charts
-log4j.appender.LogstashCharts.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashCharts.Port=12201
-
-log4j.appender.LogstashFileUploader=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashFileUploader.tags=development,file_uploader
-log4j.appender.LogstashFileUploader.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashFileUploader.Port=12201
-
-log4j.appender.LogstashPerFileTranslator=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashPerFileTranslator.tags=development,per_file_translator
-log4j.appender.LogstashPerFileTranslator.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashPerFileTranslator.Port=12201
-
-log4j.appender.LogstashProteinSearcher=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashProteinSearcher.tags=development,protein_searcher
-log4j.appender.LogstashProteinSearcher.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashProteinSearcher.Port=12201
-
-log4j.appender.LogstashProteinSearchResults=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashProteinSearchResults.tags=development,protein_search_results
-log4j.appender.LogstashProteinSearchResults.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashProteinSearchResults.Port=12201
-
-log4j.appender.LogstashArchiving=com.infoclinika.logging.appender.TaggedGelfAppender
-log4j.appender.LogstashArchiving.tags=development,archiving
-log4j.appender.LogstashArchiving.Host=udp:${logging.gelf.host}
-log4j.appender.LogstashArchiving.Port=12201
-
-log4j.logger.com.infoclinika.mssharing.model.internal.write.FileArchivingHelperImpl=INFO, LogstashArchiving, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.model.internal.write.FileOperationsManagerImpl=INFO, LogstashArchiving, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.services.jobs.ArchiverJobs=INFO, LogstashArchiving, stdout, buffer
-
-log4j.additivity.com.infoclinika.mssharing.model.internal.write.FileArchivingHelperImpl=false
-log4j.additivity.com.infoclinika.mssharing.model.internal.write.FileOperationsManagerImpl=false
-log4j.additivity.com.infoclinika.mssharing.services.jobs.ArchiverJobs=false
-
-log4j.logger.com.infoclinika.mssharing.model.internal.helper.CorsRequestSignerImpl=INFO, FileUploader, LogstashFileUploader, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.AmazonCorsController=INFO, FileUploader, LogstashFileUploader, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.FileUploadController=INFO, FileUploader, LogstashFileUploader, stdout, buffer
-
-log4j.additivity.com.infoclinika.mssharing.model.internal.helper.CorsRequestSignerImpl=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.AmazonCorsController=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.FileUploadController=false
-
-
-log4j.logger.com.infoclinika.mssharing.web.controller.ChartsController=INFO, Charts, LogstashCharts, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.model.internal.read.ChartReaderImpl=INFO, Charts, LogstashCharts, stdout, buffer
-
-log4j.additivity.com.infoclinika.mssharing.web.controller.ChartsController=false
-log4j.additivity.com.infoclinika.mssharing.model.internal.read.ChartReaderImpl=false
-
-log4j.logger.com.infoclinika.mssharing.model.internal.write.PerFileTranslator=DEBUG, PerFileTranslator, LogstashPerFileTranslator, stdout, buffer
-log4j.additivity.com.infoclinika.mssharing.model.internal.write.PerFileTranslator=false
-
-log4j.logger.com.infoclinika.mssharing.model.internal.proteinsearch=INFO, ProteinSearcher, LogstashProteinSearcher, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.model.internal.write.proteinsearch=INFO, ProteinSearcher, LogstashProteinSearcher, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.model.write.proteinsearch=INFO, ProteinSearcher, LogstashProteinSearcher, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.ProteinDatabaseController=INFO, ProteinSearcher, LogstashProteinSearcher, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.model.internal.workflow=INFO, ProteinSearcher, stdout, buffer, LogstashProteinSearcher
-log4j.logger.com.infoclinika.mssharing.workflow=INFO, ProteinSearcher, stdout, buffer, LogstashProteinSearcher
-
-log4j.additivity.com.infoclinika.mssharing.model.internal.proteinsearch=false
-log4j.additivity.com.infoclinika.mssharing.model.internal.write.proteinsearch=false
-log4j.additivity.com.infoclinika.mssharing.model.write.proteinsearch=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.ProteinDatabaseController=false
-log4j.additivity.com.infoclinika.mssharing.model.internal.workflow=false
-log4j.additivity.com.infoclinika.mssharing.workflow=false
-
-log4j.logger.com.infoclinika.mssharing.model.internal.read.proteinsearch=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.model.read.proteinsearch=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.ProcessingRunResultsController=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.RunAnalysisController=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.RunChartsController=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.web.controller.RunDataCubeResultsController=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-log4j.logger.com.infoclinika.mssharing.viewers.web.controller.CurrentViewAnalysisCaching=INFO, ProteinSearchResults, LogstashProteinSearchResults, stdout, buffer
-
-log4j.additivity.com.infoclinika.mssharing.model.internal.read.proteinsearch=false
-log4j.additivity.com.infoclinika.mssharing.model.read.proteinsearch=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.ProcessingRunResultsController=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.RunAnalysisController=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.RunChartsController=false
-log4j.additivity.com.infoclinika.mssharing.web.controller.RunDataCubeResultsController=false
-
 log4j.logger.com.infoclinika.mssharing.model.internal.entity.RawFiles=ERROR
-
-#log4j.logger.org.springframework.web.servlet.mvc.method.annotation=TRACE
 log4j.logger.com.infoclinika=INFO
 log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=INFO
 log4j.logger.com.infoclinika.datacube.internal.impl=INFO
 log4j.logger.com.infoclinika.common.io.ZipUtil=INFO
 
-#log4j.logger.org.springframework.security=DEBUG, stdout, fileout
-#log4j.logger.org.springframework.security.level=TRACE
-#log4j.logger.org.springframework.transaction.interceptor=TRACE
-#log4j.logger.org.apache.cxf=ALL
-#log4j.logger.com.fasterxml=ALL
