--- a/chorus/authentication-service-api/pom.xml
+++ b/chorus/authentication-service-api/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <jackson.version>2.6.1</jackson.version>
+        <jackson.databind.version>2.8.11.2</jackson.databind.version>
     </properties>
     <dependencies>
         <dependency>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
+            <version>${jackson.databind.version}</version>
         </dependency>
 
     </dependencies>
