--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,19 @@
     <properties>
         <infoclinika.analysis.version>1.0.26</infoclinika.analysis.version>
         <infoclinika.workflow.version>1.0-SNAPSHOT</infoclinika.workflow.version>
-        <spring.version>4.1.5.RELEASE</spring.version>
+        <spring.version>4.3.17.RELEASE</spring.version>
         <spring.data.version>1.8.0.RELEASE</spring.data.version>
-        <spring.security.version>4.0.1.RELEASE</spring.security.version>
+        <spring.security.version>4.1.1.RELEASE</spring.security.version>
         <spring.amqp.version>1.4.5.RELEASE</spring.amqp.version>
         <!-- Using the 4.1.3 due to bugs in 4.1.8 https://community.jboss.org/message/778294?_sscc=t -->
         <hibernate.version>4.3.8.Final</hibernate.version>
         <hibernate.search.version>4.2.0.Final</hibernate.search.version>
+        <httpclient.version>4.3.6</httpclient.version>
 
 
-        <jackson.version>2.6.1</jackson.version>
-        <jackson.annotations.version>2.6.0</jackson.annotations.version>
+        <jackson.version>2.8.11</jackson.version>
+        <jackson.databind.version>2.8.11.2</jackson.databind.version>
+        <jackson.annotations.version>2.8.11</jackson.annotations.version>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <guava.version>18.0</guava.version>
@@ -79,6 +81,16 @@
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
                 <version>3.18.1-GA</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.databind.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
